# ynab-demo

./: .gitignore  README.md  ghcid  stack.yaml  ynab-demo.cabal
app/: Main.hs
